--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('/e2/fonts/rv7/armyicons/armyicons.css');
+@import url($e2path + '/fonts/rv7/armyicons/armyicons.css');
 
 /* 
 GI Font (Default)
