update npm dependencies, add linkedin to footer and lowercase a in publicaffairs link

--- a/_includes/elements/footer.html
+++ b/_includes/elements/footer.html
@@ -13,6 +13,9 @@
             <li class="social-button instagram-button">
                 <a rel="noopener noreferrer" target="_blank" href="https://instagram.com/usarmy"><span>Official U.S. Army Instagram</span></a>
             </li>
+            <li class="social-button linkedin-button">
+                <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/company/us-army"><span>Official U.S. Army LinkedIn</span></a>
+            </li>
         </ul>
     </section>
     <section class="footer-bottom">
