--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -91,7 +91,7 @@
           </div>
           <ul class="quicklinks">
             <li><a href="https://www.army.mil/newsroom">Newsroom</a></li>
-            <li><a href="https://www.army.mil/publicAffairs/">Public Affairs</a></li>
+            <li><a href="https://www.army.mil/publicaffairs/">Public Affairs</a></li>
             <li><a href="https://www.army.mil/socialmedia/">SOCIAL MEDIA Guide</a></li>
             <li><a href="https://www.army.mil/join/">JOIN</a></li>
             <li><a href="https://www.army.mil/faq/">FAQs</a></li>
