import the armyicons font from e2 separately from other fonts

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -14,6 +14,7 @@
 // ----------------------------------------------------------------------
 @import "base/variables";
 @import "base/fonts";
+@import url($e2path + '/fonts/rv7/armyicons/armyicons.css');
 @import "base/colors";
 @import "base/defaults";
 @import "base/helper-classes";
