quickfix: change button span styles to use nth-child(6), instead of last-child to allow for flexible content

--- a/_scss/base/mixins/_button-transition.scss
+++ b/_scss/base/mixins/_button-transition.scss
@@ -19,7 +19,7 @@
     &:nth-child(1) { left: 50%; }
     
     &:nth-child(2),
-    &:last-child {
+    &:nth-child(6) {
       left: 50%;
       height: 1px;
       width: 0;
@@ -29,9 +29,9 @@
     &:nth-child(2) { top: 0; }
     
     &:nth-child(5),
-    &:last-child { bottom: 0; }
+    &:nth-child(6) { bottom: 0; }
     
-    &:nth-child(5), &:last-child {
+    &:nth-child(5), &:nth-child(6) {
       bottom: -1px;
       top: auto;
     }
@@ -60,7 +60,7 @@
     
     &:nth-child(5) { left: 0; }
     
-    &:last-child { left: 100%; }
+    &:nth-child(6) { left: 100%; }
   }
   
   @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
@@ -71,7 +71,7 @@
         &:nth-child(1),
         &:nth-child(2),
         &:nth-child(5),
-        &:last-child { width: 50%; }
+        &:nth-child(6) { width: 50%; }
         
         &:nth-child(3),&:nth-child(4) {
           height: 100%;
@@ -82,9 +82,9 @@
           transition-delay: 0s;
         }
         
-        &:last-child { left: 50%; }
+        &:nth-child(6) { left: 50%; }
         
-        &:nth-child(5),&:last-child {
+        &:nth-child(5),&:nth-child(6) {
           transition-delay: .3s;
         }
       }
