fix playlist player CSS when container/inner-container are within the section

--- a/_scss/elements/_playlist.scss
+++ b/_scss/elements/_playlist.scss
@@ -1,5 +1,5 @@
-.playlist *,
-.main .playlist * {
+.playlist .playlist-player *,
+.main .playlist .playlist-player * {
   @include box-sizing(content-box);
 }
 .playlist {
