--- a/_includes/elements/hot-topic.html
+++ b/_includes/elements/hot-topic.html
@@ -3,5 +3,5 @@
         <span class="notification-header">Live Stream</span>
         <span class="notification-title">Capt. Florent Groberg Hall of Heroes Induction Ceremony<span class="view-more-arrow-sm black-arrow"></span></span>
     </a>
-    <div class="notification-close"><a href="javascript:;" class="notification-button close-button black-close"><span></span></a></div>
+    <div class="notification-close"><a title="Close notification" href="javascript:;" class="notification-button close-button black-close"><span></span></a></div>
 </div>
