--- a/_layouts/banners.html
+++ b/_layouts/banners.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <title>U.S. Army Style Guide - Banners</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/e2/css/rv7/armydotmil/banners.css" type="text/css" media="screen">
