--- a/_scss/elements/_header.scss
+++ b/_scss/elements/_header.scss
@@ -215,7 +215,10 @@ header {
           }
         }
 
-        input[type=checkbox] { display: none; }
+        input[type=checkbox] {
+          position: absolute;
+          left: -10000px;
+        }
 
         a { outline: 0 none; }
 
@@ -229,6 +232,9 @@ header {
           padding: 25px 10px;
           position: relative;
           text-decoration: none;
+          text-transform: uppercase;
+          border: none;
+          background-color: transparent;
 
           // iOS Safari had an issue where it would resize the text automatically.
           // This should prevent it.
@@ -275,19 +281,25 @@ header {
       .list-container > ul > li {
 
         ul {
-          display: none;
-          padding: 18px 0;
+          // display: none;
+          max-height: 0px;
+          overflow: hidden;
+          padding: 0;
+          transition: all .25s ease-in;
 
           li a {
-            color: map-get($army-branding, grey20);
-
             // add padding to the anchor tag
             // to make the clickable area bigger
             padding: 10px 30px;
+            color: map-get($army-branding, grey20);
           }
         }
 
-        input[type=checkbox]:checked ~ ul { display: block; }
+        input[type=checkbox]:checked ~ ul {
+          // display: block;
+          max-height: 300px;
+          padding: 18px 0;
+        }
 
         input[type=checkbox]:checked ~ label {
           border-bottom: 1px solid map-get($army-branding, grey80);
@@ -507,7 +519,109 @@ header {
     }
   }
 
-  // end .menu-container
+  .nav-button {
+    border-style: solid;
+    border-color: map-get($army-branding, grey80);
+    color: map-get($army-branding, white);
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.05em;
+    line-height: 23px;
+    outline: 0 none;
+    padding: 17px 20px 15px;
+    position: absolute;
+    text-decoration: none;
+    text-transform: uppercase;
+  
+    span {
+      display: none;
+    }
+  
+    &.menu-button {
+      border-width: 0 1px 0 0;
+      left: 0;
+  
+      &::before {
+        content: "\e96d";
+        font-family: 'armyicons';
+        color: map-get($army-branding, white);
+        font-size: 32px;
+        -webkit-font-smoothing: none;
+        -moz-osx-font-smoothing: grayscale;
+        font-weight: normal;
+        position: relative;
+        line-height: 7px;
+        top: 7px;
+      }
+    }
+  
+    &.search-button {
+      border-width: 0 0 0 1px;
+      right: 0;
+  
+      &::after {
+        content: "\e96e";
+        font-family: 'armyicons';
+        color: map-get($army-branding, white);
+        font-size: 28px;
+        font-weight: normal;
+        position: relative;
+        line-height: 7px;
+        top: 7px;
+      }
+    }
+  
+    @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+      &.menu-button, &.search-button {
+        border: none;
+        span {
+          display: inline;
+        }
+      }
+  
+      &::before {
+        margin-right: 10px;
+      }
+      &::after {
+        margin-left: 10px;
+      }
+      &.close-button.menu-button::before {
+        margin-right: 10px;
+      }
+      &.close-button.search-button::after {
+        margin-left: 10px;
+      }
+    }
+  
+    &.close-button {
+      &.black-close span::before,
+      &.black-close span::after {
+        color: map-get($army-branding, black);
+      }
+    }
+  
+    &.close-button {
+      &.menu-button::before {
+        content: "\e96f";
+        font-size: 26px;
+        top: 5px;
+        left: 0px;
+        width: 33px;
+        display: inline-block;
+        text-align: center;
+      }
+      &.search-button::after {
+        content: "\e96f";
+        font-size: 26px;
+        top: 5px;
+        width: 29px;
+        display: inline-block;
+        text-align: center;
+      }
+    }
+  }
+
+  // end header
 }
 
 // Mixins
