--- a/_includes/elements/custom-select.html
+++ b/_includes/elements/custom-select.html
@@ -4,7 +4,7 @@
 <!--[if !IE 9]>-->
 <div class="custom-select">
 <!--<![endif]-->
-    <select>
+    <select title="element-custom-select">
         <option value="0" selected>Option 1</option>
         <option value="1">Option 2</option>
         <option value="2">Option 3</option>
