--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -1,7 +1,7 @@
 <div class="page-banner1 page-banner standard parallax-image">
     <div class="full-width-image">
         <div class="overlay-effect"></div>
-        <img src="https://www.army.mil/e2/images/rv7/banners/army_worldwide/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/banners/army_worldwide/2500.jpg 2500w, https://www.army.mil/e2/images/rv7/banners/army_worldwide/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/banners/army_worldwide/768.jpg 768w">
+        <img alt="Example news banner" src="https://www.army.mil/e2/images/rv7/banners/army_worldwide/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/banners/army_worldwide/2500.jpg 2500w, https://www.army.mil/e2/images/rv7/banners/army_worldwide/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/banners/army_worldwide/768.jpg 768w">
     </div>
     <div class="container">
         <div class="inner-container">
@@ -15,7 +15,7 @@
 
 <div class="page-banner2 page-banner leader-banner image-gradient parallax-image image-to-top">
     <div class="full-width-image">
-        <img src="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg"
+        <img alt="Example leader banner" src="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg"
              srcset="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/2500.jpg 2500w,
                      https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg 1600w,
                      https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1200.jpg 1200w,
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="inner-container">
             <div class="logo">
-                <img alt="logo alt" src="https://www.army.mil/e2/images/rv7/org/logos/101stairborne.png">
+                <img alt="organization logo" src="https://www.army.mil/e2/images/rv7/org/logos/101stairborne.png">
             </div>
             <div class="left-container">
                 <h1>Page Banners</h1>
@@ -104,7 +104,7 @@
 <div class="page-banner4 page-banner parallax-image standard">
     <div class="full-width-image">
         <div class="overlay-effect"></div>
-        <img src="https://www.army.mil/e2/images/rv7/banners/valor/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/banners/valor/2500.jpg 2500w, https://www.army.mil/e2/images/rv7/banners/valor/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/banners/valor/768.jpg 768w">
+        <img alt="Example features banner" src="https://www.army.mil/e2/images/rv7/banners/valor/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/banners/valor/2500.jpg 2500w, https://www.army.mil/e2/images/rv7/banners/valor/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/banners/valor/768.jpg 768w">
     </div>
     <div class="container">
         <div class="inner-container">
