--- a/_includes/elements/parallax-image.html
+++ b/_includes/elements/parallax-image.html
@@ -8,6 +8,6 @@
 
 <div class="parallax-image">
     <div class="full-width-image">
-        <img src="https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/1200.jpg 1200w, https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/992.jpg 992w, https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/768.jpg 768w, https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/480.jpg 480w">
+        <img alt="Example parallax" src="https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/1200.jpg 1200w, https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/992.jpg 992w, https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/768.jpg 768w, https://www.army.mil/e2/images/rv7/leaders/masthead/vcsa/480.jpg 480w">
     </div>
 </div>
