--- a/_layouts/upgrade.html
+++ b/_layouts/upgrade.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <title>Broswer Upgrade | The United States Army</title>
+    <meta content='width=device-width, initial-scale=1' name='viewport' />
+    <title>Browser Upgrade | The United States Army</title>
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <link rel="stylesheet" href="/e2/css/rv7/upgrade/style.css">
     <!--[if IE 8]>
