add optional flag to extend statements in case extended class does not exist

--- a/_scss/elements/_forms.scss
+++ b/_scss/elements/_forms.scss
@@ -55,7 +55,7 @@ form {
     margin: 0 0 25px;
     
     &.hidden {
-      @extend .hidden;
+      @extend .hidden !optional;
       
       display: none;
       margin: 0;
