set color for news and headlines to armyblack, to make them more consistent

--- a/_scss/elements/_headlines.scss
+++ b/_scss/elements/_headlines.scss
@@ -17,6 +17,8 @@
       
       a {
         padding-right: 23px;
+        color: map-get($army-branding, armyblack);
+        font: 600 1em/1.3em $font-family;
 
         .view-more-arrow-sm { display: none; }
 
