--- a/_scss/elements/_news.scss
+++ b/_scss/elements/_news.scss
@@ -99,7 +99,7 @@
       }
 
       .title {
-        color: map-get($army-branding, grey70);
+        color: map-get($army-branding, armyblack);
         font: 600 1em/1.3em $font-family;
         padding: 20px 15px 5px;
       }
