--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -1,3 +1,43 @@
+<!-- BEGIN OFFICIAL GOV BANNER -->  
+<div id="officialgovsite">
+  <details title="expand details on how to know this is an official site" tabindex="0">
+    <summary>
+      <span class="govbannertoggle">
+        <span class="govbanner_flag"></span>
+        An official website of the United States government <span class="govbanner_how_expand"><u>Here's how you know</u></span>
+        <span class="govbanner_icon_expand"> 
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 32 32">
+            <path class="icon_expand"  d="M15.88 2.733h-8.867l10.64 13.3-10.64 13.3h8.867l10.64-13.3-10.64-13.3z"/>
+          </svg>
+        </span>
+      </span>
+    </summary>
+  </details>
+  <div class="govbannercontent">
+    <ul>
+      <li>
+        <span class="title"><strong>Official websites use .mil </strong></span>
+        A <strong>.mil</strong> website belongs to an official U.S. Department of Defense organization in the United States.
+      </li>
+      <li>
+        <span class="title"><strong>Secure .mil websites use HTTPS</strong></span>
+        A <strong>lock (
+        <span class="govbanner_icon_lock">
+          <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 52 64">
+            <title>lock </title>
+            <path class="icon_lock" fill-rule="evenodd"
+              d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z">
+            </path>
+          </svg>
+        </span>)
+        </strong> or <strong> https://</strong> means you've safely connected to the .mil website. Share sensitive information only on official, secure websites.
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- END OFFICIAL GOV BANNER -->  
+
+<!-- BEGIN GLOBAL NAVIGATION -->
 <header>
   <div class="navbar">
     <div class="navbar-container">
@@ -116,3 +156,4 @@
     </div>
   </div>
 </header>
+<!-- END GLOBAL NAVIGATION -->
