--- a/_scss/elements/_header.scss
+++ b/_scss/elements/_header.scss
@@ -11,6 +11,8 @@
 // Modules
 // ----------------------------------------------------------------------
 @import "../modules/usagov-sayt";
+@import "../modules/armybrand";
+@import "../modules/official-gov-banner";
 
 // ----------------------------------------------------------------------
 // CSS
