remove href js void call from main menu links (considered inline script)

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -41,13 +41,13 @@
 <header>
   <div class="navbar">
     <div class="navbar-container">
-      <a href="javascript:;" title="Main Menu" class="nav-button menu-button" aria-expanded="false" aria-controls="header-menu-window" role="button">
+      <a href="" title="Main Menu" class="nav-button menu-button" aria-expanded="false" aria-controls="header-menu-window" role="button">
         <span>MENU</span>
       </a>
       <a title="Home" href="/" class="nav-army-star">
         <span>HOME</span>
       </a>
-      <a href="javascript:;" title="Search" class="nav-button search-button" aria-expanded="false" aria-controls="header-search-window" role="button">
+      <a href="" title="Search" class="nav-button search-button" aria-expanded="false" aria-controls="header-search-window" role="button">
         <span>SEARCH</span>
       </a>
     </div>
